fix overflow

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,11 +3,19 @@
 // TODO
 // THEME
 
+.header-container {
+  padding: 2rem 8rem;
+
+  @media screen and (max-width: 750px) {
+    padding: 0 1rem;
+  }
+
+  @media screen and (max-width: 600px) {
+    padding: 0.5rem;
+  }
+}
+
 .app-container {
   height: 100%;
   background-color: $color-background-dark;
-}
-
-.main {
-  height: 100%;
 }
