--- a/src/app/features/home/home-page/home-page.scss
+++ b/src/app/features/home/home-page/home-page.scss
@@ -1,10 +1,8 @@
 .home-page {
   padding: 2rem 8rem;
-  height: 100%;
 
   @media screen and (max-width: 750px) {
     padding: 0 1rem;
-    margin-top: 4rem;
   }
 
   @media screen and (max-width: 600px) {
